Add file tests, button tests, and make normalizeOutput fn work with <button as well as <input

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-guidance-container.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-guidance-container.html.twig
@@ -3,8 +3,10 @@
 {{
     form.file({
         'label': 'foo',
-        'guidance': 'bar',
-        'guidance-container': 'baz'
+        'guidance': 'foo <span class="bar">bar</span>',
+        'name': 'form[field]',
+        'guidance-container': 'baz',
+        'id': 'form_field'
     })
 }}
 {% endblock %}
