--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-guidance.html.twig
@@ -3,7 +3,9 @@
 {{
     form.file({
         'label': 'foo',
-        'guidance': 'bar'
+        'guidance': 'foo <span class="bar">bar</span>',
+        'name': 'form[field]',
+        'id': 'form_field'
     })
 }}
 {% endblock %}
