--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-required-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-required-guidance.html.twig
@@ -3,9 +3,10 @@
 {{
     form.file({
         'label': 'foo',
-        'help': 'my help text',
         'name': 'form[field]',
-        'id': 'form_field'
+        'id': 'form_field',
+        'required': true,
+        'guidance': 'foo <span class="bar">bar</span>'
     })
 }}
 {% endblock %}
