--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file.html.twig
@@ -2,7 +2,9 @@
 {% block body %}
 {{
     form.file({
-        'label': 'foo'
+        'label': 'foo',
+        'name': 'form[field]',
+        'id': 'form_field'
     })
 }}
 {% endblock %}
