--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -1845,7 +1845,6 @@ guidance    | string | Text to be displayed in a popover, adds a (?) icon after 
 help        | string | Additional guidance information to be displayed next to the input
 label       | string | Text for the `<label>` companion element
 prepend     | string | Text or markup to include before the input element
-required    | bool   | Visually indicates that the field must be completed
 show-label  | bool   | Control visibility of the `<label>` element without affecting layout (default: true)
 
 ## Options applied to input
@@ -1857,7 +1856,6 @@ disabled    | bool   | Stops the element from being interactive if true
 form        | string | Specific one or more forms this label belongs to
 id          | string | A unique identifier, will also be used as the label's `for` attribute
 name        | string | The name of this control
-required    | bool   | Adds `required` and `aria-required="true"` attributes
 value       | string | Specifies the value of the input
 data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
 
@@ -1868,7 +1866,12 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
 {% spaceless %}
     {% import _self as form %}
 
-    {{ form.text(options|defaults({'type': 'range', 'class': 'form-range'})) }}
+    {{ 
+        form.text(options
+            |defaults({'type': 'range', 'class': 'form-range'})
+            |exclude('required')
+        ) 
+    }}
 
 {% endspaceless %}
 {% endmacro %}
