--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -1364,14 +1364,8 @@ controls.class    | string | A space separated list of class names
             {{ form.error({ 'value': options.parent.error|default }) }}
         {% endif %}
 
-        {% if isToggleSwitch %}
-            {% if options.parent.help is defined and options.parent.help is not empty %}
-                {{ form.help({ 'value': options.parent.help|default }) }}
-            {% endif %}
-        {% else %}
-            {% if options.parent.help is defined and options.parent.help is not empty and options.parent.help_id is defined and options.parent.help_id is not empty %}
-                {{ form.help({ 'value': options.parent.help|default, 'id': options.parent.help_id }) }}
-            {% endif %}
+        {% if options.parent.help is defined and options.parent.help is not empty and options.parent.help_id is defined and options.parent.help_id is not empty %}
+            {{ form.help({ 'value': options.parent.help|default, 'id': options.parent.help_id }) }}
         {% endif %}
 
         {% if options.parent.bare is not defined or options.parent.bare != true %}
@@ -2296,6 +2290,9 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
 {% spaceless %}
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
+
+
+    {% set options = modify_options(options|default({})) %}
 
     {% set toggleLabel = '<span class="hide">toggle ' ~ options.label ~ '</span>' %}
 
