--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -244,6 +244,7 @@ fieldset {
         box-shadow: 0 0 0 1px color(black);
         outline: 3px solid color(border, focus);
         outline-offset: 2px;
+        z-index: 1;
     }
 }
 
