Adds option to provide initial data to repeater component

--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -99,7 +99,8 @@
         {
           "id"    : "repeater",
           "label" : "Repeater",
-          "src"   : tab_repeater
+          "src"   : tab_repeater,
+            "active": true
         },
         {
           "id"    : "select",
@@ -115,7 +116,6 @@
           "id"    : "text",
           "label" : "Text",
           "src"   : tab_text,
-          "active": true
         },
         {
           "id"    : "textarea",
