--- a/views/lexicon/forms/repeater.html.twig
+++ b/views/lexicon/forms/repeater.html.twig
@@ -16,7 +16,11 @@
             ],
             'max-entries': 3,
             'add-new-group-text': 'Add',
-            'add-another-group-text': 'Add another'
+            'add-another-group-text': 'Add another',
+            'values': [
+                [{ name: 'text', value: 'foo' }, { name: 'select2multi', value: ['food_gravy'] }],
+                [{ name: 'text', value: 'bar' }, { name: 'select2multi', value: ['food_puds', 'food_pizza'] }]
+            ]
         }) }}
 
             {{
