Added non DT pagination examples to lexicon and fixed overflow issue.

--- a/stylesheets/_component.pagination.scss
+++ b/stylesheets/_component.pagination.scss
@@ -1,4 +1,5 @@
 .pagination {
+  @include clear-fix;
   background-color: color(white);
 
   // We assume pagination will always sit underneath an element, and that
