--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -306,7 +306,7 @@ td.table__form .rules + .form__group:last-of-type {
     $rule-color-if:     #3f8ccc;
     $rule-color-and:    #f7d183;
     $rule-color-or:     #9d7ee3;
-    $rule-color-return: #7dbc8e;
+    $rule-color-return: #6aa17a;
     $rule-color-help:   #b54745;
 
     border-left: 4px solid color(gray, lightest);
