--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -622,11 +622,14 @@ td.table__form .rules + .form__group:last-of-type {
     }
 
     .remove__control {
+        background: none;
+        border: 0;
         color: color(white);
         font-size: $font-size-large;
+        padding: 2px 6px;
         position: absolute;
-        right: 10px;
-        top: 10px;
+        right: 2px;
+        top: 5px;
 
         @include respond-min($screen-tablet) {
             color: color(text);
