--- a/views/playground/xfp-rules/rules.html.twig
+++ b/views/playground/xfp-rules/rules.html.twig
@@ -88,12 +88,12 @@
 </div>' %}
 
 {% set return = '
-<div class="rule-block__control">
-    <div class="form__group form__group--medium">
-        <label class="control__label hide">Choose trigger</label>
-        <div class="controls">
-            <select placeholder="Choose condition" class="form__control select js-select2 select2-hidden-accessible" tabindex="-1" aria-hidden="true">
-                <option value="foo">Choose return value</option>
+<div class=\"rule-block__control\">
+    <div class=\"form__group form__group--medium\">
+        <label class=\"control__label hide\">Choose trigger</label>
+        <div class=\"controls\">
+            <select placeholder=\"Choose condition\" class=\"form__control select js-select2 select2-hidden-accessible\" tabindex=\"-1\" aria-hidden=\"true\">
+                <option value=\"foo\">Choose return value</option>
             </select>
         </div>
     </div>
@@ -122,7 +122,7 @@
             <div class="rule-block__controls">
                 {{ controls|raw }}
             </div>
-            <a data-action="remove" data-placement="left" data-toggle="tooltips" data-title="Remove this item"  class="remove__control js-remove-trigger"><i  class="icon-remove-sign"><span class="hide">Remove this item</span></i></a>
+            <button data-action="remove" data-placement="left" data-toggle="tooltips" data-title="Remove this item"  class="remove__control js-remove-trigger"><i  class="icon-remove-sign"><span class="hide">Remove this item</span></i></button>
         </div>
 
         <div class="rule-block rule-block--or">
@@ -132,7 +132,7 @@
             <div class="rule-block__controls">
                 {{ controls|raw }}
             </div>
-            <a data-action="remove" data-placement="left" data-toggle="tooltips" data-title="Remove this item"  class="remove__control js-remove-trigger"><i  class="icon-remove-sign"><span class="hide">Remove this item</span></i></a>
+            <button data-action="remove" data-placement="left" data-toggle="tooltips" data-title="Remove this item"  class="remove__control js-remove-trigger"><i  class="icon-remove-sign"><span class="hide">Remove this item</span></i></button>
         </div>
 
         <div class="rule-links">
@@ -150,7 +150,7 @@
         <div class="rule-block__controls">
             {{ controls|raw }}
         </div>
-        <a data-action="remove" data-placement="left" data-toggle="tooltips" data-title="Remove this item"  class="remove__control js-remove-trigger"><i  class="icon-remove-sign"><span class="hide">Remove this item</span></i></a>
+        <button data-action="remove" data-placement="left" data-toggle="tooltips" data-title="Remove this item"  class="remove__control js-remove-trigger"><i  class="icon-remove-sign"><span class="hide">Remove this item</span></i></button>
     </div>
 
     <div class="rule-links">
@@ -184,7 +184,7 @@
         <div class="rule-block__controls">
             {{ controls|raw }}
         </div>
-        <a data-action="remove" data-placement="left" data-toggle="tooltips" data-title="Remove this item"  class="remove__control js-remove-trigger"><i  class="icon-remove-sign"><span class="hide">Remove this item</span></i></a>
+        <button data-action="remove" data-placement="left" data-toggle="tooltips" data-title="Remove this item"  class="remove__control js-remove-trigger"><i  class="icon-remove-sign"><span class="hide">Remove this item</span></i></button>
     </div>    
 
     <div class="rule-links">
