Remove code related to twig.js

--- a/views/lexicon/patterns/settings/tab.html.twig
+++ b/views/lexicon/patterns/settings/tab.html.twig
@@ -78,6 +78,14 @@
 
     <div class="settings-section">
 
+        {{
+            form.text({
+                'id': 'settings-text',
+                'label': 'Text input',
+                'help': 'Optional help text'
+            })
+        }}
+
         <ol>
             <li>Page 1 - Your details</li>
             <li>Page 1 - Your details</li>
