Fix duplicate HTML ID

--- a/views/lexicon/tables.html.twig
+++ b/views/lexicon/tables.html.twig
@@ -34,7 +34,7 @@
           "src"   : tab_basic
         },
         {
-          "id"    : "basic",
+          "id"    : "basic-scroll",
           "label" : "Basic (scrolling)",
           "src"   : tab_basic_scrolling
         },
