Add jQuery Migrate plugin

--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -188,5 +188,6 @@
 
 {% block javascript %}{% endblock %}
 {% block tab_javascript %}{% endblock %}
+<script src="https://code.jquery.com/jquery-migrate-3.1.0.js"></script>
 </body>
 </html>
