--- a/stylesheets/_mixin.mixins-to-organise.scss
+++ b/stylesheets/_mixin.mixins-to-organise.scss
@@ -145,6 +145,14 @@
         }
     }
 
+    .form__control.select {
+        background-image: linear-gradient(45deg, transparent 49%, color(text) 49%), linear-gradient(135deg, color(text) 49%, transparent 49%), linear-gradient(to right, darken($background-color, 10%), darken($background-color, 10%));
+
+        @include ie-lte(9) {
+            background-image: none;
+        }
+    }
+
     // Set validation states also for addons
     .input-group-addon {
         color: $text-color;
@@ -182,7 +190,6 @@
         color: color(text, help);
         font-family: $font-family-base;
     }
-
 
     // Set validation states also for addons
     .select2-selection {
