--- a/stylesheets/_component.button-groups.scss
+++ b/stylesheets/_component.button-groups.scss
@@ -172,6 +172,10 @@
 // Remove the gradient and set the same inset shadow as the :active state
 .btn__group.open .dropdown__toggle {
     box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+
+    &:focus {
+        outline: 3px solid color(border, focus);
+    }
 }
 
 // Reposition the caret
