Tidies up the new repeater initial state functionality

--- a/views/lexicon/forms/repeater.html.twig
+++ b/views/lexicon/forms/repeater.html.twig
@@ -18,8 +18,8 @@
             'add-new-group-text': 'Add',
             'add-another-group-text': 'Add another',
             'values': [
-                [{ name: 'text', value: 'foo' }, { name: 'select2multi', value: ['food_gravy'] }],
-                [{ name: 'text', value: 'bar' }, { name: 'select2multi', value: ['food_puds', 'food_pizza'] }]
+                [{ name: 'text', value: 'Mike' }, { name: 'select2multi', value: ['food_gravy'] }],
+                [{ name: 'text', value: 'James' }, { name: 'select2multi', value: ['food_gravy', 'food_pizza'] }],
             ]
         }) }}
 
