--- a/stylesheets/_palette.base.scss
+++ b/stylesheets/_palette.base.scss
@@ -159,7 +159,7 @@ $palette-alias: (
     text: (
         base:     #000,
         help:     map-get(map-get($palette-monochromes, gray), dull),
-        light:    map-get(map-get($palette-monochromes, gray), lighter),
+        light:    map-get(map-get($palette-monochromes, gray), dull),
         disabled: map-get(map-get($palette-monochromes, gray), lighter)
     ),
     link: (
