--- a/views/pulsar/components/tab.html.twig
+++ b/views/pulsar/components/tab.html.twig
@@ -56,9 +56,9 @@
             {{ _settings|raw }}
         </div>
         {% endif %}
-        <div class="tab__content">
+        <main class="tab__content">
             {% block tab_content %}{% endblock %}
-        </div>
+        </main>
     </div>
 </div>
 
