--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -83,7 +83,7 @@
 <a class="skip-link" href="#skip-target" tabindex="1">Skip to main content</a>
 
 {% block body %}
-    <div role="main" class="container" id="top">
+    <div class="container" id="top">
         <div class="inner-wrapper">
             {{ nav.primary({ 'data': nav_data|default() }) }}
 
