--- a/stylesheets/_override.shame.scss
+++ b/stylesheets/_override.shame.scss
@@ -142,3 +142,11 @@
 main {
   border: 2px solid red !important;
 }
+
+aside {
+  border: 2px solid blue !important;
+}
+
+section {
+  border: 2px solid orange !important;
+}
