--- a/views/pulsar/components/tab.html.twig
+++ b/views/pulsar/components/tab.html.twig
@@ -47,16 +47,16 @@
 
     <div class="tab__inner">
         {% if _hasSidebar == true %}
-        <div class="tab__sidebar">
+        <aside class="tab__sidebar">
             {{ _sidebar|raw }}
-        </div>
+        </aside>
         {% endif %}
         {% if _hasSettings == true %}
         <div class="tab__settings">
             {{ _settings|raw }}
         </div>
         {% endif %}
-        <main class="tab__content">
+        <main class="tab__content" id="skip-target">
             {% block tab_content %}{% endblock %}
         </main>
     </div>
