--- a/views/pulsar/components/tab.html.twig
+++ b/views/pulsar/components/tab.html.twig
@@ -31,7 +31,8 @@
 <div class="tab__container{% if _hasSettings == true %} has-settings{% endif %}{% if _hasSidebar == true %} has-sidebar{% endif %}">
 
     {% if _actions_left is not empty or _actions_right is not empty %}
-    <div class="actionsbar">
+    <section class="actionsbar" aria-labelledby="aria-page-actions">
+        <h2 class="hide" id="aria-page-actions">Page actions</h2>
         {% if _actions_left is not empty %}
         <div class="float--left">
             {{ _actions_left|raw }}
@@ -42,19 +43,19 @@
             {{ _actions_right|raw }}
         </div>
         {% endif %}
-    </div>
+    </section>
     {% endif %}
 
     <div class="tab__inner">
         {% if _hasSidebar == true %}
-        <aside class="tab__sidebar">
+        <aside class="tab__sidebar" aria-label="additional information">
             {{ _sidebar|raw }}
         </aside>
         {% endif %}
         {% if _hasSettings == true %}
-        <div class="tab__settings">
+        <section class="tab__settings" {# consider use of context specific label here to convert to region #}>
             {{ _settings|raw }}
-        </div>
+        </section>
         {% endif %}
         <main class="tab__content" id="skip-target">
             {% block tab_content %}{% endblock %}
